# pal-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: generate_midi.cmake  generate_sprites.cmake  generate_wav.cmake  util.cmake
example/: CMakeLists.txt
include/: audio.h  entity.h  font.h  game.h  graphics.h  mathutils.h  midi_parse.h  pal.h  physics.h  queue.h  sim.h  sprite.h  ui.h
src/: audio.c  entity.c  font.c  game.c  graphics.c  mathutils.c  midi_parse.c  physics.c  queue.c  sprite.c  ui.c
util/: img_to_sprite.py  midi_to_c.py  requirements.txt  setup.sh  wav_to_c.py
